fix(nextjs): update dynamic route params to Promise for Next.js 15 compatibility

--- a/src/tasks/task-1.mdx
+++ b/src/tasks/task-1.mdx
@@ -4,6 +4,6 @@ date: "2024-06-10"
 description: "This is the first task."
 ---
 
-# Task 1
+# AWS EC2
 
-This is the content for Task 1. You can add images, code, and more here. 
+making aws ecs using terraform
