added task1 screenshots

--- a/src/tasks/task-1.mdx
+++ b/src/tasks/task-1.mdx
@@ -7,3 +7,8 @@ description: "This is the first task."
 # AWS EC2
 
 making aws ecs using terraform
+
+![Task 1 Code](../../public/task1Code.png)
+![Task 1 EC2](../../public/task1EC2.png)
+
+Created EC2 instance using AWS.
