--- a/src/tasks/task-1.mdx
+++ b/src/tasks/task-1.mdx
@@ -8,7 +8,7 @@ description: "This is the first task."
 
 making aws ecs using terraform
 
-![Task 1 Code](../../public/task1Code.png)
-![Task 1 EC2](../../public/task1EC2.png)
+![Task 1 Code](/task1Code.png)
+![Task 1 EC2](/task1EC2.png)
 
 Created EC2 instance using AWS.
