--- a/src/tasks/task-4.mdx
+++ b/src/tasks/task-4.mdx
@@ -8,8 +8,8 @@ description: "This is the fourth task."
 
 #Launch a Static Website on S3 
 ![a](/Task4cr.png)
-![b](Task4Runnning.png)
-![c](Task4s3.png)
+![b](/Task4Runnning.png)
+![c](/Task4s3.png)
 
 # Code
 ## main.tf
