--- a/src/tasks/task-4.mdx
+++ b/src/tasks/task-4.mdx
@@ -4,79 +4,93 @@ date: "2024-06-13"
 description: "This is the fourth task."
 ---
 
+import Tabs from '../components/Tabs'
+import Tab from '../components/Tab'
+
 # Task 4
 
-#Launch a Static Website on S3 
-![a](/Task4cr.png)
-![b](/Task4Runnning.png)
-![c](/Task4s3.png)
+<Tabs>
+  <Tab label="S3 website">
 
-# Code
-## main.tf
-```tf
-provider "aws" {
-    region = "ap-south-1"
-    access_key ="***"
-    secret_key ="***"
-}
+  ## Launch a Static Website on S3
 
-resource "aws_s3_bucket" "website" {
-  bucket = "bytewave-website-xx"  # replace 'xx' with your initials
-}
+  ![a](/Task4cr.png)
+  ![b](/Task4Runnning.png)
+  ![c](/Task4s3.png)
 
-resource "aws_s3_bucket_website_configuration" "site" {
-  bucket = aws_s3_bucket.website.id
+  ## Code
 
-  index_document {
-    suffix = "index.html"
+  ### main.tf
+  ```tf
+  provider "aws" {
+      region = "ap-south-1"
+      access_key ="***"
+      secret_key ="***"
   }
-}
 
-resource "aws_s3_bucket_public_access_block" "block" {
-  bucket = aws_s3_bucket.website.id
+  resource "aws_s3_bucket" "website" {
+    bucket = "bytewave-website-xx"  # replace 'xx' with your initials
+  }
 
-  block_public_acls       = false
-  block_public_policy     = false
-  ignore_public_acls      = false
-  restrict_public_buckets = false
-}
+  resource "aws_s3_bucket_website_configuration" "site" {
+    bucket = aws_s3_bucket.website.id
 
-resource "aws_s3_bucket_policy" "policy" {
-  bucket = aws_s3_bucket.website.id
+    index_document {
+      suffix = "index.html"
+    }
+  }
 
-  policy = jsonencode({
-    Version = "2012-10-17",
-    Statement = [{
-      Sid       = "PublicReadGetObject",
-      Effect    = "Allow",
-      Principal = "*",
-      Action    = "s3:GetObject",
-      Resource  = "${aws_s3_bucket.website.arn}/*"
-    }]
-  })
-}
+  resource "aws_s3_bucket_public_access_block" "block" {
+    bucket = aws_s3_bucket.website.id
 
-resource "aws_s3_object" "index" {
-  bucket       = aws_s3_bucket.website.id
-  key          = "index.html"
-  source       = "${path.module}/index.html"
-  content_type = "text/html"
-  # Remove the ACL line below
-  # acl          = "public-read"
-}
-```
+    block_public_acls       = false
+    block_public_policy     = false
+    ignore_public_acls      = false
+    restrict_public_buckets = false
+  }
 
-## output.tf
-```
-output "website_url" {
-  value = aws_s3_bucket_website_configuration.site.website_endpoint
-}
-```
+  resource "aws_s3_bucket_policy" "policy" {
+    bucket = aws_s3_bucket.website.id
 
-## index.html
-```html
-<html>
-  <head><title>ByteWave Solutions</title></head>
-  <body><h1>Welcome to ByteWave Solutions</h1></body>
-</html>
-```
+    policy = jsonencode({
+      Version = "2012-10-17",
+      Statement = [{
+        Sid       = "PublicReadGetObject",
+        Effect    = "Allow",
+        Principal = "*",
+        Action    = "s3:GetObject",
+        Resource  = "${aws_s3_bucket.website.arn}/*"
+      }]
+    })
+  }
+
+  resource "aws_s3_object" "index" {
+    bucket       = aws_s3_bucket.website.id
+    key          = "index.html"
+    source       = "${path.module}/index.html"
+    content_type = "text/html"
+    # Remove the ACL line below
+    # acl          = "public-read"
+  }
+  ```
+  ### output.tf
+  ```tf
+  output "website_url" {
+    value = aws_s3_bucket_website_configuration.site.website_endpoint
+  }
+  ```
+  ### index.html
+  ```html
+  <html>
+    <head><title>ByteWave Solutions</title></head>
+    <body><h1>Welcome to ByteWave Solutions</h1></body>
+  </html>
+  ```
+
+  </Tab>
+  <Tab label="EC2 dev server">
+
+  Content for EC2 dev server will go here.
+
+  </Tab>
+</Tabs>
