Update Task 3 with AWS VPC and EC2 Terraform code

--- a/src/tasks/task-2.mdx
+++ b/src/tasks/task-2.mdx
@@ -6,7 +6,7 @@ description: "This is the second task."
 
 # Task 2
 
-making aws vpc using terraform
+# making aws vpc using terraform
 
 ![Task 2 Code](/task2code.png)
 ![Task 2 running](/task2running.png)
