--- a/src/tasks/task-3.mdx
+++ b/src/tasks/task-3.mdx
@@ -113,4 +113,91 @@ import Tabs from '../components/Tabs'
     # security_groups = [aws_security_group.allow_tls.name]
     ```
   </Tab>
+  <Tab label="Cloud Watch">
+    # AWS CloudWatch
+    ![cloud watch](/cloudwatch.png)
+    ![code](/cloudwatchCode.png)
+
+    ``` tf
+      resource "aws_cloudwatch_metric_alarm" "custom_metric_alarm" {
+        alarm_name          = "MyCustomMetric_Alarm"
+        alarm_description   = "Alarm when MyCustomMetric is greater than 10"
+        comparison_operator = "GreaterThanThreshold"
+        evaluation_periods  = 1
+        metric_name         = "MyCustomMetric"
+        namespace           = "MyCustomNamespace"
+        period              = 60
+        statistic           = "Average"
+        threshold           = 10
+        actions_enabled     = false
+
+        dimensions = {
+          InstanceId = "i-mockinstance"
+        }
+      }
+    ```
+  </Tab>
+  <Tab label="Cloud Trail">
+    # AWS Cloud Trail
+    ![cloud trail](/cloudTrail.png)
+    ![code](/cloudtrailcode.png)
+
+    ``` tf
+      # Create S3 bucket for CloudTrail logs
+      resource "aws_s3_bucket" "cloudtrail_bucket" {
+        bucket = "cloudtrail-logs-${random_id.suffix.hex}"
+        force_destroy = true
+      }
+
+      # Generate a random suffix to ensure unique bucket name
+      resource "random_id" "suffix" {
+        byte_length = 4
+      }
+
+      # Bucket policy to allow CloudTrail to write logs
+      resource "aws_s3_bucket_policy" "cloudtrail_policy" {
+        bucket = aws_s3_bucket.cloudtrail_bucket.id
+
+        policy = jsonencode({
+          Version = "2012-10-17",
+          Statement = [
+            {
+              Effect = "Allow",
+              Principal = {
+                Service = "cloudtrail.amazonaws.com"
+              },
+              Action = "s3:PutObject",
+              Resource = "${aws_s3_bucket.cloudtrail_bucket.arn}/AWSLogs/${data.aws_caller_identity.current.account_id}/*",
+              Condition = {
+                StringEquals = {
+                  "s3:x-amz-acl" = "bucket-owner-full-control"
+                }
+              }
+            },
+            {
+              Effect = "Allow",
+              Principal = {
+                Service = "cloudtrail.amazonaws.com"
+              },
+              Action = "s3:GetBucketAcl",
+              Resource = aws_s3_bucket.cloudtrail_bucket.arn
+            }
+          ]
+        })
+      }
+
+      # Get current account ID for bucket policy
+      data "aws_caller_identity" "current" {}
+
+      # Create the CloudTrail trail
+      resource "aws_cloudtrail" "main" {
+        name                          = "cloudtrail-example"
+        s3_bucket_name                = aws_s3_bucket.cloudtrail_bucket.id
+        include_global_service_events = true
+        is_multi_region_trail         = true
+        enable_log_file_validation    = true
+      #   is_logging                    = true
+      }
+    ```
+  </Tab>
 </Tabs>
