--- a/src/tasks/task-3.mdx
+++ b/src/tasks/task-3.mdx
@@ -200,4 +200,45 @@ import Tabs from '../components/Tabs'
       }
     ```
   </Tab>
+  <Tab label="AWS Lambda">
+    # AWS Lambda
+    ![lambda](/lambda.png)
+    ![lambda2](/lambdacode.png)
+
+    ```
+   
+
+
+resource "aws_iam_role" "lambda_exec_role" {
+  name = "lambda_exec_role"
+
+  assume_role_policy = jsonencode({
+    Version = "2012-10-17",
+    Statement = [{
+      Action = "sts:AssumeRole",
+      Principal = {
+        Service = "lambda.amazonaws.com"
+      },
+      Effect = "Allow",
+      Sid    = ""
+    }]
+  })
+}
+
+resource "aws_iam_role_policy_attachment" "lambda_basic" {
+  role       = aws_iam_role.lambda_exec_role.name
+  policy_arn = "arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole"
+}
+
+resource "aws_lambda_function" "hello_lambda" {
+  function_name = "hello_lambda"
+  role          = aws_iam_role.lambda_exec_role.arn
+  runtime       = "python3.9"
+  handler       = "lambda_function.lambda_handler"
+  filename      = "lambda_function_payload.zip"
+
+  source_code_hash = filebase64sha256("lambda_function_payload.zip")
+}
+    ```
+  </Tab>
 </Tabs>
