--- a/src/tasks/task-3.mdx
+++ b/src/tasks/task-3.mdx
@@ -376,5 +376,144 @@ Resources:
   ```
 
   </Tab>
+    <Tab label="EBS">
+    <h3>EBS</h3>
+    ```hcl
+    resource "aws_ebs_volume" "task3_volume" {
+      availability_zone = aws_instance.task3_instance.availability_zone
+      size              = 1
+      type              = "gp2"
+
+      tags = {
+        Name = "Task3-EBS-Volume-FreeTier"
+      }
+    }
+
+    # Attach EBS Volume to EC2
+    resource "aws_volume_attachment" "task3_attachment" {
+      device_name = "/dev/sdf"
+      volume_id   = aws_ebs_volume.task3_volume.id
+      instance_id = aws_instance.task3_instance.id
+      force_detach = true
+    }
+
+    # SSH Key Variable
+    variable "key_name" {
+      description = "SSH key name for EC2"
+      type        = string
+      default     = "cloudkey" # Replace with your actual key pair name
+    }
+    ```
+    <img src="/ebs.png" alt="EBS" />
+  </Tab>
+  <Tab label="RDS">
+    <h3>RDS</h3>
+    ```hcl
+    resource "aws_db_instance" "task3_rds" {
+      allocated_storage    = 20
+      storage_type         = "gp2"
+      engine               = "mysql"
+      engine_version       = "8.0.35"
+      instance_class       = "db.t3.micro"
+      identifier           = "task3-mysql-instance"
+      username             = var.db_username
+      password             = var.db_password
+      db_name              = "task3db"
+      publicly_accessible  = true
+      skip_final_snapshot  = true
+
+      tags = {
+        Name = "Task3-RDS-FreeTier"
+      }
+    }
+    ```
+    <img src="/RDS (2).png" alt="RDS" />
+  </Tab>
+  <Tab label="Athena">
+    <h3>Athena</h3>
+    ```hcl
+    # Create an S3 bucket for Athena query results
+    resource "aws_s3_bucket" "athena_results_bucket" {
+      bucket = "sreedevi-athena-results-bucket"
+      force_destroy = true
+    }
+
+    # Create an Athena workgroup (optional but best practice)
+    resource "aws_athena_workgroup" "task3_workgroup" {
+      name = "task3_workgroup"
+
+      configuration {
+        result_configuration {
+          output_location = "s3://${aws_s3_bucket.athena_results_bucket.bucket}/query-results/"
+        }
+      }
+    }
+
+    # Athena database
+    resource "aws_athena_database" "task3_db" {
+      name   = "task3db"
+      bucket = aws_s3_bucket.athena_results_bucket.id
+    }
+
+    # Athena table using a sample CSV layout
+    resource "aws_athena_named_query" "task3_create_table" {
+      name      = "create_sample_table"
+      database  = aws_athena_database.task3_db.name
+      workgroup = aws_athena_workgroup.task3_workgroup.name
+      query     = <<EOF
+    CREATE EXTERNAL TABLE IF NOT EXISTS sample_table (
+      name string,
+      age int,
+      city string
+    )
+    ROW FORMAT SERDE 'org.apache.hadoop.hive.serde2.lazy.LazySimpleSerDe'
+    WITH SERDEPROPERTIES (
+      'serialization.format' = ','
+    )
+    LOCATION 's3://${aws_s3_bucket.athena_results_bucket.bucket}/sample-data/'
+    TBLPROPERTIES ('has_encrypted_data'='false');
+    EOF
+    }
+    ```
+    <img src="/athena.png" alt="Athena" />
+  </Tab>
+
+  <Tab label="CDK">
+    <h3>CDK</h3>
+        ```
+    import { Construct } from "constructs";
+import { App, TerraformStack } from "cdktf";
+import { AwsProvider } from "@cdktf/provider-aws/lib/provider";
+import { S3Bucket } from "@cdktf/provider-aws/lib/s3-bucket";
+
+class MyS3Stack extends TerraformStack {
+  constructor(scope: Construct, id: string) {
+    super(scope, id);
+
+    new AwsProvider(this, "AWS", {
+      region: "eu-west-1",
+    });
+
+    new S3Bucket(this, "MyBucket", {
+      bucket: "cdktf-demo-s3-bucket-unique-1234", // ✅ Must be globally unique!
+    });
+  }
+}
+
+const app = new App();
+new MyS3Stack(app, "s3-stack");
+app.synth();
+
+    ```
+    ![image](/S3CDK.png)
+    # s3 bucket created with cdk
+    ![image](/Cdk1.png)
+    # Deployment of CDK
+    ![image](/Cdk2.png)
+    # Code of CDK
+    ![image](/cdkcode.png)
+    
+ 
+  </Tab>
   
 </Tabs>
